--- a/Source/PerfectlyGenericItem.csproj
+++ b/Source/PerfectlyGenericItem.csproj
@@ -31,7 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="PGIThingDefOf.cs" />
     <Compile Include="Harmony\PGI_GenStuff_CanMake_Patch.cs" />
+    <Compile Include="Harmony\PGI_SketchGenUtility_IsStuffAllowed_Patch.cs" />
     <Compile Include="Harmony\PGI_ThingSetMakerUtility_IsDerpAndDisallowed_Patch.cs" />
     <Compile Include="Harmony\PGI_BaseGenUtility_IsCheapWallStuff_Patch.cs" />
     <Compile Include="Harmony\PGI_BackCompatibility_BackCompatibleDefName_Patch.cs" />
